# qtminesweeper

./: .gitignore  README.md  cmake_eclipse.sh
src/: CMakeLists.txt
src/cli_test/: CMakeLists.txt  cli.cpp
src/gui/: CMakeLists.txt  global_constants.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  preferences_dialog.cpp  preferences_dialog.hpp
src/gui/game_area/: button_manager.cpp  button_manager.hpp  game_area_widget.cpp  game_area_widget.hpp  game_board_widget.cpp  game_board_widget.hpp  game_header_widget.cpp  game_header_widget.hpp  mine_pushbutton.cpp  mine_pushbutton.hpp
src/minesweeper/: CMakeLists.txt  boarddata.hpp  boardgenerator.cpp  boardgenerator.hpp  gameboard.cpp  gameboard.hpp  minefield.cpp  minefield.hpp
src/resources/: resources.qrc  win_appicon.rc
